--- a/.github/workflows/buildAndOptionalRelease.yml
+++ b/.github/workflows/buildAndOptionalRelease.yml
@@ -113,7 +113,9 @@ jobs:
         run: |
               C:/Android/android-sdk/cmdline-tools/latest/bin/sdkmanager.bat "platforms;android-29"
               C:/Android/android-sdk/cmdline-tools/latest/bin/sdkmanager.bat "build-tools;28.0.3" "build-tools;29.0.2" "cmdline-tools;latest" "tools"
-
+      - uses: repolevedavaj/install-nsis@v1.0.1
+        with:
+          nsis-version: '3.10'
       #Run build script
       - name: Run build batch script
         run: ${{ github.workspace }}/build.bat
