--- a/unity/Packages/manifest.json
+++ b/unity/Packages/manifest.json
@@ -1,12 +1,22 @@
 {
   "dependencies": {
+    "com.android.test.accessactivity": "file:../Packages/AccessActivity/",
     "com.google.external-dependency-manager": "file:../GooglePackages/com.google.external-dependency-manager-1.2.156.tgz",
     "com.google.firebase.app": "file:../GooglePackages/com.google.firebase.app-6.15.2.tgz",
     "com.google.firebase.crashlytics": "file:../GooglePackages/com.google.firebase.crashlytics-6.15.2.tgz",
-    "com.android.test.accessactivity": "file:../Packages/AccessActivity/",
-    "com.unity.package-manager-ui": "2.0.13",
-    "com.unity.textmeshpro": "1.4.1",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.ide.rider": "1.2.1",
+    "com.unity.ide.visualstudio": "2.0.15",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.multiplayer-hlapi": "1.0.8",
+    "com.unity.test-framework": "1.1.31",
+    "com.unity.textmeshpro": "2.1.4",
+    "com.unity.timeline": "1.2.18",
+    "com.unity.ugui": "1.0.0",
+    "com.unity.xr.legacyinputhelpers": "2.1.9",
     "com.unity.modules.ai": "1.0.0",
+    "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
