--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ unity/Assets/Plugins/Editor/JetBrains.meta
 unity/Assets/TextMesh Pro/Examples & Extras/
 unity/Assets/Plugins/Editor.meta
 unity/Assets/TextMesh Pro/Examples & Extras.meta
+/unity/Packages/packages-lock.json
+/unity/ProjectSettings/PackageManagerSettings.asset
+/unity/.vsconfig
