--- a/.github/workflows/buildAndOptionalRelease.yml
+++ b/.github/workflows/buildAndOptionalRelease.yml
@@ -157,8 +157,8 @@ jobs:
           nsis-version: '3.10'
       #Run build script
       #Run build script
-      - name: Run build batch script
-        run: ${{ github.workspace }}/build.bat
+      - name: Run build PowerShell script
+        run: pwsh -File ${{ github.workspace }}/build.ps1
         env:
           BUILD_WINDOWS: ${{ github.event.inputs.buildWindows == 'true' || github.event.inputs.buildWindows == '' }}
           BUILD_MAC: ${{ github.event.inputs.buildMac == 'true' || github.event.inputs.buildMac == '' }}
