--- a/.github/workflows/buildAndOptionalRelease.yml
+++ b/.github/workflows/buildAndOptionalRelease.yml
@@ -60,6 +60,14 @@ jobs:
 
       - uses: actions/checkout@v4
 
+
+      - name: Get Unity Version
+        run: |
+          $projectVersionFile = "${{ github.workspace }}/unity/ProjectSettings/ProjectVersion.txt"
+          $unityVersion = Get-Content $projectVersionFile | Select-String "m_EditorVersion:" | ForEach-Object { $_.ToString().Split(":")[1].Trim() }
+          echo "UNITY_VERSION=$unityVersion" | Out-File -FilePath $env:GITHUB_ENV -Append
+          Write-Host "Unity Version: $unityVersion"
+
       #Get the version for build and store in environment variable for later use.
       #Get the version for build and store in environment variable for later use.
       - name: Get version
@@ -109,28 +117,28 @@ jobs:
       - name: Setup Unity Editor
         uses: seinsinnes/setup-unity@v1.1.0
         with:
-          unity-version: 2019.4.41f1
+          unity-version: ${{ env.UNITY_VERSION }}
           install-path: "C:/Program Files"
 
       - name: Setup Unity Linux Module
         if: ${{ github.event.inputs.buildLinux == 'true' || github.event.inputs.buildLinux == '' }}
         uses: seinsinnes/setup-unity@v1.1.0
         with:
-          unity-version: 2019.4.41f1
+          unity-version: ${{ env.UNITY_VERSION }}
           unity-modules: "linux-mono"
           install-path: "C:/Program Files"
       - name: Setup Unity Mac Module
         if: ${{ github.event.inputs.buildMac == 'true' || github.event.inputs.buildMac == '' }}
         uses: seinsinnes/setup-unity@v1.1.0
         with:
-          unity-version: 2019.4.41f1
+          unity-version: ${{ env.UNITY_VERSION }}
           unity-modules: "mac-mono"
           install-path: "C:/Program Files"
       - name: Setup Unity Android Module
         if: ${{ github.event.inputs.buildAndroid == 'true' || github.event.inputs.buildAndroid == '' }}
         uses: seinsinnes/setup-unity@v1.1.0
         with:
-          unity-version: 2019.4.41f1
+          unity-version: ${{ env.UNITY_VERSION }}
           unity-modules: "android"
           install-path: "C:/Program Files"
 
@@ -143,7 +151,7 @@ jobs:
           unity-authenticator-key: ${{ secrets.UNITY_AUTHENTICATOR_KEY }}
       #Move unity to where the build script expects it to be installed.
       - name: Move unity to expected location
-        run: Rename-Item "C:/Program Files/2019.4.41f1" Unity
+        run: Rename-Item "C:/Program Files/${{ env.UNITY_VERSION }}" Unity
 
       #Remove all pre-installed android sdk build tool versions except 28.0.3
       #Get-ChildItem -Path "C:/Android/android-sdk/build-tools" -Exclude 28.0.3,29.0.2 | Remove-Item -Recurse -Force
