--- a/.github/workflows/buildAndOptionalRelease.yml
+++ b/.github/workflows/buildAndOptionalRelease.yml
@@ -62,35 +62,14 @@ jobs:
 
 
       - name: Get Unity Version
-        run: |
-          $projectVersionFile = "${{ github.workspace }}/unity/ProjectSettings/ProjectVersion.txt"
-          $unityVersion = Get-Content $projectVersionFile | Select-String "m_EditorVersion:" | ForEach-Object { $_.ToString().Split(":")[1].Trim() }
-          echo "UNITY_VERSION=$unityVersion" | Out-File -FilePath $env:GITHUB_ENV -Append
-          Write-Host "Unity Version: $unityVersion"
+        run: . ./workflowScripts/workflowHelper.ps1; Get-UnityVersion
 
       #Get the version for build and store in environment variable for later use.
       #Get the version for build and store in environment variable for later use.
       - name: Get version
-        run: |
-           $versionFile = "${{ github.workspace }}/unity/Assets/Resources/version.txt"
-           $version = Get-Content $versionFile
-           $customName = "${{ github.event.inputs.customReleaseName }}"
-           
-           if (-not [string]::IsNullOrWhiteSpace($customName)) {
-               if ($customName -match '^[a-zA-Z0-9]+$') {
-                   Write-Host "Using Custom Release Name: $customName"
-                   echo "RELEASE_NAME=$customName" | Out-File -FilePath $env:GITHUB_ENV -Append
-               } else {
-                   Write-Error "Custom Release Name '$customName' is invalid. Must be alphanumeric only."
-                   exit 1
-               }
-           } else {
-               Write-Host "Using Version from file: $version"
-               echo "RELEASE_NAME=$version" | Out-File -FilePath $env:GITHUB_ENV -Append
-           }
-           # Build_Version is kept for backward compatibility if other scripts use it, 
-           # but we rely on RELEASE_NAME for artifacts/tags now.
-           echo "Build_Version=$version" | Out-File -FilePath $env:GITHUB_ENV -Append
+        run: . ./workflowScripts/workflowHelper.ps1; Get-ReleaseVersion
+        env:
+           CUSTOM_RELEASE_NAME: ${{ github.event.inputs.customReleaseName }}
 
       ## Save build version as artifact to ensure it can be used in the release step.
       ## Save release name as artifact to ensure it can be used in the release step.
@@ -285,14 +264,7 @@ jobs:
 
       - name: Check if release exists
         id: check_release
-        run: |
-          release_url=$(gh api -X GET /repos/${{ github.repository }}/releases/tags/${{ env.RELEASE_NAME }} --jq '.upload_url' 2>/dev/null || echo "")
-          if [ -n "$release_url" ]; then
-            echo "exists=true" >> $GITHUB_OUTPUT
-            echo "upload_url=$release_url" >> $GITHUB_OUTPUT
-          else
-            echo "exists=false" >> $GITHUB_OUTPUT
-          fi
+        run: . ./workflowScripts/workflowHelper.ps1; Check-ReleaseExists
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
