Added missing checkout step to get powershell scripts to release job.

--- a/.github/workflows/buildAndOptionalRelease.yml
+++ b/.github/workflows/buildAndOptionalRelease.yml
@@ -276,6 +276,8 @@ jobs:
     needs: Build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+
       - name: Get version from artifact
         uses: actions/download-artifact@v4
         with:
