Added more fixes to release job part.

--- a/.github/workflows/buildAndOptionalRelease.yml
+++ b/.github/workflows/buildAndOptionalRelease.yml
@@ -294,7 +294,8 @@ jobs:
 
       - name: Check if release exists
         id: check_release
-        run: . ./workflowScripts/workflowHelper.ps1; Check-ReleaseExists
+        run: . ./workflowscripts/workflowHelper.ps1; Check-ReleaseExists
+        shell: pwsh
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
