Added logic to select language for basic content pack.

--- a/unity/Assets/StreamingAssets/content/D2E/base/content_pack.ini
+++ b/unity/Assets/StreamingAssets/content/D2E/base/content_pack.ini
@@ -1,8 +1,10 @@
 ; content packs include a content header ini which has:
 [ContentPack]
-name=Descent Journeys in the Dark Second Edition
-; Optional description
-description=Base Game, required to play
+name={ffg:PRODUCT_DJ01_TITLE}
+description={ffg:PRODUCT_DJ01_DESCRIPTION}
+image="{import}/img/DJ01_CoreSet"
+id=D2EBase
+type=box
 
 [PackTypebox]
 name=Boxed Expansions
