--- a/unity/Assets/StreamingAssets/content/MoM/base/content_pack.ini
+++ b/unity/Assets/StreamingAssets/content/MoM/base/content_pack.ini
@@ -1,9 +1,10 @@
 ; content packs include a content header ini which has:
 [ContentPack]
 name={ffg:PRODUCT_TITLE_MAD20}
-
-; Optional description
-description=Base Game, required to play
+description={ffg:PRODUCT_TITLE_MAD20}
+image="{import}/img/MAD20"
+id=MoMBase
+type=box
 
 [PackTypebox]
 name={pck:BOXED}
