Changed validate scenario action to also run manually.

--- a/.github/workflows/validate-scenario-repo.yml
+++ b/.github/workflows/validate-scenario-repo.yml
@@ -47,7 +47,7 @@ jobs:
           echo "url=$url" >> $GITHUB_OUTPUT
 
       - name: Validate scenario and comment
-        if: steps.extract.outputs.url != '' && github.event.issue
+        if: steps.extract.outputs.url != ''
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
