--- a/.github/workflows/validate-scenario-repo.yml
+++ b/.github/workflows/validate-scenario-repo.yml
@@ -19,9 +19,10 @@ jobs:
     name: Check scenario repository files
     runs-on: ubuntu-latest
     # only run when issue title begins with [Scenario] and body contains a GitHub URL
+    # or if triggered manually via workflow_dispatch
     if: |
-      startsWith(github.event.issue.title, '[Scenario]') &&
-      contains(github.event.issue.body, 'https://github.com/')
+      github.event_name == 'workflow_dispatch' ||
+      (startsWith(github.event.issue.title, '[Scenario]') && contains(github.event.issue.body, 'https://github.com/'))
 
     steps:
       - name: Checkout (needed for workspace)
